create flash message for login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,20 @@
 </head>
 <body>
 
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <% flash.each do |message_type, message| %>
+          <div class="alert alert-<%= message_type %>">
+            <%= message %>
+          </div>
+          <% end %>
+      </div>
+    </div>
+  </div>
 <%= yield %>
+
 
 </body>
 </html>
