--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-
+<%= render 'layouts/header' %>
   <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
