add user logout

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -20,7 +20,7 @@
     <%= f.label "Address" %>
     <%= f.text_field :street_one %>
 
-    <%= f.label "Address (cont.)" %>
+    <%= f.label "Address \(cont\) " %>
     <%= f.text_field :street_two %>
 
     <%= f.label "State" %>
@@ -47,7 +47,6 @@
     <%= f.submit "Create my account" , class: "btn btn-primary" %>
 
     <%= link_to 'Already have an account?', login_path %>
-
 
     <% end %>
   </div>
