--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,14 +6,13 @@
         <li><%= link_to 'Home', root_path %></li>
         <li><%= link_to 'Help', root_path %></li>
         <% if logged_in? %>
-          <li><%= link_to 'Users', '#' %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <li><%= link_to 'Profile', root_path %></li>
-              <li><%= link_to 'Settings', root_path %></li>
+              <li><%= link_to 'Account Settings', current_user %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to 'Logout', logout_path, method: "delete" %>
