--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar navbar-default navbar-inverse">
   <div class="container">
     <%= link_to 'sample app', root_path, id: "logo" %>
     <nav>
