--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,28 +1,24 @@
-<header class="navbar navbar-default navbar-inverse">
-  <div class="container">
-    <%= link_to 'sample app', root_path, id: "logo" %>
-    <nav>
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to 'Home', root_path %></li>
-        <li><%= link_to 'Help', root_path %></li>
-        <% if logged_in? %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Account <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to 'Profile', root_path %></li>
-              <li><%= link_to 'Account Settings', current_user %></li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to 'Logout', logout_path, method: "delete" %>
-              </li>
-            </ul>
-          </li>
-          <% else %>
-            <li><%= link_to 'Login', login_path %></li>
-          <% end %>
-      </ul>
-    </nav>
-  </div>
+<!-- Navbar -->
+<header>
+  <nav class="lime">
+   <div class="nav-wrapper">
+     <%= link_to 'Helios', root_path, id: "logo", class: "brand-logo" %>
+     <ul id="nav-mobile" class="right hide-on-med-and-down">
+       <li><%= link_to 'Home', root_path %></li>
+       <li><%= link_to 'Help', root_path %></li>
+       <!-- Dropdown Trigger -->
+       <% if logged_in? %>
+         <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Account<i class="material-icons right"></i></a></li>
+           <ul id="dropdown1" class="dropdown-content">
+             <li><%= link_to 'Profile', current_user %></li>
+             <li><%= link_to 'Account Settings', current_user %></li>
+             <li class="divider"></li>
+             <li><%= link_to 'Logout', logout_path, method: "delete" %></li>
+           </ul>
+        <% else %>
+          <li><%= link_to 'Login', login_path %></li>
+        <% end %>
+     </ul>
+   </div>
+  </nav>
 </header>
