--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col s2 offset-s3">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages' %>
 
