--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <h1><%= "#{@user.first_name}" %>'s Profile  </h1>
 
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col s6 offset-s3">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages' %>
 
