Add user creation tests

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -44,7 +44,7 @@
     <%= f.label "Company Description" %>
     <%= f.text_field :company_desc %>
 
-    <%= f.submit "Create my account" , class: "btn btn-primary" %>
+      <%= f.submit "Create my account" , class: "btn btn-primary", id: "create-submit" %>
 
     <%= link_to 'Already have an account?', login_path %>
 
