--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
 <header>
   <nav class="lime">
    <div class="nav-wrapper">
-     <%= link_to 'Helios', root_path, id: "logo", class: "brand-logo" %>
+     <%= link_to 'Service Works', root_path, id: "logo", class: "brand-logo" %>
      <ul id="nav-mobile" class="right hide-on-med-and-down">
        <li><%= link_to 'Home', root_path %></li>
        <li><%= link_to 'Help', root_path %></li>
