--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Helios</title>
+  <title>ServiceWorks</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -22,11 +22,7 @@
       </div>
     </div>
   </div>
-  <!-- <div class="parallax-container">
-    <div class="row">
-    </div>
-    <div class="parallax"><img src="grass.jpg"></div>
-  </div> -->
+
   <%= yield %>
 
 
