--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+
+<div class="parallax-container">
+  <div class="row">
+    <h1>Join us today!</h1>
+  </div>
+  <div class="parallax"><%= image_tag "grass.jpg" %>
+  <div class="">
+
+  </div>
+</div>
