--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,53 +2,98 @@
 <h1><%= "#{@user.first_name}" %>'s Profile  </h1>
 
 <div class="row">
-  <div class="col s6 offset-s3">
+  <div class="col s12">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages' %>
-
-    <%= f.label "First Name" %>
-    <%= f.text_field :first_name %>
-
-    <%= f.label "Last Name" %>
-    <%= f.text_field :last_name %>
-
-    <%= f.label "Email" %>
-    <%= f.email_field :email %>
-
-    <%= f.label "Phone" %>
-    <%= f.text_field :phone %>
-
-    <%= f.label "Address" %>
-    <%= f.text_field :street_one %>
-
-    <%= f.label "Address \(cont.\)" %>
-    <%= f.text_field :street_two %>
-
-    <%= f.label "State" %>
-    <%= f.text_field :state %>
-
-    <%= f.label "Zip" %>
-    <%= f.text_field :zip %>
-
-    <%= f.label "Password" %>
-    <%= f.password_field :password %>
-
-    <%= f.label :password_confirmation, "Confirmation" %>
-    <%= f.password_field :password_confirmation%>
-
-    <%= f.label "Are you a company?" %>
-    <%= f.check_box :is_provider %>
-
-    <%= f.label "Company Name" %>
-    <%= f.text_field :company_name %>
-
-    <%= f.label "Company Description" %>
-    <%= f.text_field :company_desc %>
-
-    <%= f.submit "Create my account" , class: "btn btn-primary" %>
-
-    <%= link_to 'Already have an account?', login_path %>
-
-    <% end %>
+    <div class="row">
+      <div class="input-field col s4 offset-s2">
+        <%= f.label "First Name" %>
+        <%= f.text_field :first_name %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s4 offset-s2">
+        <%= f.label "Last Name" %>
+        <%= f.text_field :last_name %>
+      </div>
+    </div>
+  </div>
+  <div class="col s12" >
+    <div class="row">
+      <div class="input-field col s6">
+        <%= f.label "Email" %>
+        <%= f.email_field :email %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s6">
+        <%= f.label "Phone" %>
+        <%= f.text_field :phone %>
+      </div>
+    </div>
+  </div>
+<div class="col s12">
+  <div class="row">
+    <div class="input-field col s3">
+      <%= f.label "Address" %>
+      <%= f.text_field :street_one %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="input-field col s3">
+      <%= f.label "Address cont." %>
+      <%= f.text_field :street_two %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="input-field col s3">
+      <%= f.label "State" %>
+      <%= f.text_field :state %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="input-field col s3">
+      <%= f.label "Zip" %>
+      <%= f.text_field :zip %>
+    </div>
   </div>
 </div>
+<div class="col s12">
+  <div class="row">
+    <div class="input-field col s6">
+      <%= f.label "Password" %>
+      <%= f.password_field :password %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="input-field col s6">
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation%>
+    </div>
+  </div>
+
+</div>
+<div class="col s12">
+  <div class="row">
+    <input type="checkbox" class="checkbox col s6" checked>
+      <%= f.label "Are you a company?" %>
+      <%= f.check_box :is_provider %>
+    </input>
+  </div>
+</div>
+  <div class="col s12">
+    <div class="row">
+      <div class="input-field col s6">
+        <%= f.label "Company Name" %>
+        <%= f.text_field :company_name %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s6">
+        <%= f.label "Company Description" %>
+        <%= f.text_field :company_desc %>
+      </div>
+    </div>
+  </div>
+</div>
+    <% end %>
