--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,18 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--Import materialize.css-->
+  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+  <!--Let browser know website is optimized for mobile-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
 
 <%= render 'layouts/header' %>
 
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <% flash.each do |message_type, message| %>
@@ -21,10 +26,11 @@
           <% end %>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <%= yield %>
 
+  <!--Import jQuery before materialize.js-->
 
 </body>
 </html>
