--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <!-- Navbar -->
 <header>
   <nav class="green">
-   <div class="nav-wrapper">
+   <div class="nav-wrapper container">
      <%= link_to 'Service Works', root_path, id: "logo", class: "brand-logo" %>
      <ul id="nav-mobile" class="right hide-on-med-and-down">
        <li><%= link_to 'Home', root_path %></li>
