--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -6,11 +6,11 @@ body {
   line-height: 18px;
 }
 
-p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
-}
+// p, ol, ul, td {
+//   font-family: verdana, arial, helvetica, sans-serif;
+//   font-size: 13px;
+//   line-height: 18px;
+// }
 
 pre {
   background-color: #eee;
@@ -18,18 +18,18 @@ pre {
   font-size: 11px;
 }
 
-a {
-  color: #000;
+// a {
+//   color: #000;
+//
+//   &:visited {
+//     color: #666;
+//   }
 
-  &:visited {
-    color: #666;
-  }
-
-  &:hover {
-    color: #fff;
-    background-color: #000;
-  }
-}
+//   &:hover {
+//     color: #fff;
+//     background-color: #000;
+//   }
+// }
 
 div {
   &.field, &.actions {
@@ -46,7 +46,7 @@ div {
   background-color: red;
   display: table;
 }
-
+s
 #error_explanation {
   width: 450px;
   border: 2px solid red;
@@ -66,8 +66,8 @@ div {
     color: #fff;
   }
 
-  ul li {
-    font-size: 12px;
-    list-style: square;
-  }
+  // ul li {
+  //   font-size: 12px;
+  //   list-style: square;
+  // }
 }
