--- a/app/views/service_requests/_form.html.erb
+++ b/app/views/service_requests/_form.html.erb
@@ -11,11 +11,20 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="input-field">
     <%= f.label :additional_notes %><br>
     <%= f.text_field :additional_notes %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="input-field col s12">
+    <%= f.label "Service" %><br>
+    <%= f.collection_select :services, @services, :id, :name %>
   </div>
+
+  <div class="row">
+    <div class="actions" style="margin-top: 40px;">
+      <%= f.submit "Create Service Request" , class: "btn btn-primary" %>
+    </div>
+  </div>
+
 <% end %>
