update homepage parrallax

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,18 +1,17 @@
 
-<div class="parallax-container">
+<div class="parallax-container" id="homedoor">
   <div class="row">
     <div class="">
         <!-- <h1>Join us today!</h1> -->
     </div>
    </div>
    <!-- Parrallax Home Section 1 -->
-    <div class="parallax homedoor"><%= image_tag "greendoor.jpg" %>  </div>
+    <div class="parallax"><%= image_tag "greendoor.jpg" %>  </div>
 
 </div>
 
-<div class="container">
-  <section>
 <!-- Homepage Card section-->
+<div class="container">
     <div class="row ">
       <div class="col s12 m4">
         <div class="icon block">
@@ -34,14 +33,14 @@
       <div class="row ">
         <div class="col s12 m4">
           <div class="icon block">
-              <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+              <h2 class="center brown-text"><i class="material-icons">dashboard</i></h2>
               <div class="card 300px">
                 <div class="card-image">
                   <%= image_tag("http://placehold.it/200x100")%>
                   <span class="card-title">Home Repairs</span>
                 </div>
                 <div class="card-content">
-                  <p>Find service near you</p>
+                  <p>Find repairs locally</p>
                 </div>
                 <div class="card-action">
                 </div>
@@ -52,14 +51,14 @@
         <div class="row ">
           <div class="col s12 m4">
             <div class="icon block">
-            <h2 class="center brown-text"><i class="material-icons">thumb_up</i></h2>
+            <h2 class="center brown-text"><i class="material-icons">search</i></h2>
               <div class="card 300px">
                 <div class="card-image">
                   <%= image_tag("http://placehold.it/200x100")%>
-                  <span class="card-title">All Services</span>
+                  <span class="card-title">Find a Service</span>
                 </div>
                 <div class="card-content">
-                  <p>Find service near you</p>
+                  <p>All services</p>
                 </div>
                 <div class="card-action">
                 </div>
@@ -69,7 +68,6 @@
         </div>
       </div>
    </div>
-  </section>
 </div>
 
 <!-- Parrallax Home Section 2 -->
@@ -90,27 +88,22 @@
     <div class="row ">
       <div class="col s4 m4">
         <div class="icon block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-          <h5>24/7 Service</h5>
-
+          <h2 class="center brown-text"><i class="material-icons">schedule</i></h2>
+          <h5 class="home-tag">24/7 Service</h5>
         </div>
       </div>
-    <!-- </div> -->
 
-    <!-- <div class="row"> -->
       <div class="col s4 m4">
         <div class="icon block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-          <h5>Home Repairs</h5>
+          <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
+          <h5 class="home-tag">Home Repairs</h5>
         </div>
       </div>
-    <!-- </div> -->
 
-    <!-- <div class="row"> -->
       <div class="col s4 m4">
         <div class="icon block">
-            <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-          <h5></h5>
+          <h2 class="center brown-text"><i class="material-icons">perm_identity</i></h2>
+          <h5 class="home-tag">All Services</h5>
         </div>
       </div>
     </div>
