--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,35 +1,26 @@
 <!-- Navbar -->
 <header>
-  <nav class="green">
-   <div class="nav-wrapper container">
-     <%= link_to 'Service Works', root_path, id: "logo", class: "brand-logo" %>
-     <ul id="nav-mobile" class="right hide-on-med-and-down">
-       <li><%= link_to 'Home', root_path %></li>
-       <li><%= link_to 'Help', root_path %></li>
-       <!-- Dropdown Trigger -->
-       <% if logged_in? %>
-         <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Account<i class="material-icons right"></i></a></li>
-           <ul id="dropdown1" class="dropdown-content">
-             <li><%= link_to 'Profile', current_user %></li>
-             <li><%= link_to 'Account Settings', current_user %></li>
-             <li class="divider"></li>
-             <li><%= link_to 'Logout', logout_path, method: "delete" %></li>
-           </ul>
-        <% else %>
-          <li><%= link_to 'Login', login_path %></li>
-        <% end %>
-     </ul>
-   </div>
-  </nav>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-8 col-md-offset-2">
-        <% flash.each do |message_type, message| %>
-          <div class="alert alert-<%= message_type %>">
-            <%= message %>
-          </div>
+  <div class="navbar-fixed">
+    <nav class="#8bc34a light-green">
+     <div class="nav-wrapper container">
+       <%= link_to 'Service Works', root_path, id: "logo", class: "brand-logo" %>
+       <ul id="nav-mobile" class="right hide-on-med-and-down">
+         <li><%= link_to 'Home', root_path %></li>
+         <li><%= link_to 'Help', root_path %></li>
+         <!-- Dropdown Trigger -->
+         <% if logged_in? %>
+           <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Account<i class="material-icons right"></i></a></li>
+             <ul id="dropdown1" class="dropdown-content">
+               <li><%= link_to 'Profile', current_user %></li>
+               <li><%= link_to 'Account Settings', current_user %></li>
+               <li class="divider"></li>
+               <li><%= link_to 'Logout', logout_path, method: "delete" %></li>
+             </ul>
+          <% else %>
+            <li><%= link_to 'Login', login_path %></li>
           <% end %>
-      </div>
-    </div>
+       </ul>
+     </div>
+    </nav>
   </div>
 </header>
