Add index and new service request views. Add service request create method

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,6 @@
   <%= csrf_meta_tags %>
   <!--Import Google Icon Font-->
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--Import materialize.css-->
-  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -16,7 +14,7 @@
 
 <%= render 'layouts/header' %>
 
-  <!-- <div class="container">
+  <div class="container">
     <div class="row">
       <div class="col-md-8 col-md-offset-2">
         <% flash.each do |message_type, message| %>
@@ -26,11 +24,9 @@
           <% end %>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <%= yield %>
-
-  <!--Import jQuery before materialize.js-->
 
 </body>
 </html>
