--- a/app/views/service_requests/_form.html.erb
+++ b/app/views/service_requests/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@service_request) do |f| %>
+<%= form_for [@user, @user.service_requests.build] do |f| %>
   <% if @service_request.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@service_request.errors.count, "error") %> prohibited this service_request from being saved:</h2>
@@ -11,14 +11,14 @@
     </div>
   <% end %>
 
-  <div class="input-field">
-    <%= f.label :additional_notes %><br>
-    <%= f.text_field :additional_notes %>
+  <div class="input-field col s12">
+    <%= f.label :services %><br>
+    <%= f.collection_select :services, @services, :id, :name %>
   </div>
 
-  <div class="input-field col s12">
-    <%= f.label "Service" %><br>
-    <%= f.collection_select :services, @services, :id, :name %>
+  <div class="input-field">
+    <%= f.label :additional_notes %><br>
+    <%= f.text_area :additional_notes %>
   </div>
 
   <div class="row">
