--- a/app/views/service_requests/index.html.erb
+++ b/app/views/service_requests/index.html.erb
@@ -1,27 +1,27 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Service Requests</h1>
+<h1><%= current_user.first_name %>'s Service Requests</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Additional notes</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @service_requests.each do |service_request| %>
-      <tr>
-        <td><%= service_request.additional_notes %></td>
-        <td><%= link_to 'Show', service_request %></td>
-        <td><%= link_to 'Edit', edit_service_request_path(service_request) %></td>
-        <td><%= link_to 'Destroy', service_request, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<% @service_requests.order(created_at: :desc).each do |sr| %>
+  <div class="additional-notes">
+    <p>
+      <%= sr.created_at.to_formatted_s(:long) %>
+    </p>
+    <p>
+      Services:
+    </p>
+    <ul>
+      <% sr.services.each do |s| %>
+      <li><%= s.name %></li>
+    </ul>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Service request', new_service_request_path %>
+    <p>
+      Notes:
+    </p>
+    <p>
+      <%= sr.additional_notes %>
+    </p>
+  </div>
+  <hr>
+<% end %>
+<%= link_to 'New Service request', new_user_service_request_path %>
