map dependencies, and map div

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,11 +18,13 @@
             <h2 class="center brown-text"><i class="material-icons">location_on</i></h2>
             <div class="card 300px">
               <div class="card-image">
+
                 <%= image_tag("http://placehold.it/200x100")%>
                 <span class="card-title">Search 24/7</span>
               </div>
               <div class="card-content">
                 <p>Find service near you</p>
+
               </div>
               <div class="card-action">
               </div>
@@ -120,14 +122,13 @@
   </div>
   <div class="parallax"><%= image_tag "dining.jpg" %></div>
 </div>
-<footer class="footer-copyright">
+
   <div class="container">
     <div class="row">
-      <p>
-        <br>
-        <br>
-        <br>
-      </p>
+      <div class="col s8 offset-s1">
+        <div id="map">
+
+        </div>
+      </div>
     </div>
   </div>
-</footer>
