google maps api script

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,8 @@
 
 
 <%= render 'layouts/footer' %>
-
+<script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCT2eNqRyxDqj4foi8wO31yi40-AC6C820&callback=initMap">
+</script>
 </body>
 </html>
