--- a/app/views/service_requests/show.html.erb
+++ b/app/views/service_requests/show.html.erb
@@ -5,5 +5,4 @@
   <%= @service_request.additional_notes %>
 </p>
 
-<%= link_to 'Edit', edit_service_request_path(@service_request) %> |
-<%= link_to 'Back', service_requests_path %>
+<%= link_to 'Back', user_service_requests_path(current_user) %>
