edit html files

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,7 +19,7 @@
   </div>
   <div class="footer-copyright">
     <div class="container">
-      © 2015 Copyright. Made with love in South Florida.
+      &copy; 2015 by Wyncode. Made with love in South Florida.
     <a class="grey-text text-lighten-4 right" href="#!"></a>
     </div>
   </div>
