--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -19,10 +19,10 @@
             <div class="card 300px">
               <div class="card-image">
                 <%= image_tag("http://placehold.it/200x100")%>
-                <span class="card-title">Search 24/7</span>
+                <span class="card-title">Search for Service</span>
               </div>
               <div class="card-content">
-                <p>Find service near you</p>
+                <p>Find a service near you.</p>
               </div>
               <div class="card-action">
               </div>
@@ -37,10 +37,10 @@
               <div class="card 300px">
                 <div class="card-image">
                   <%= image_tag("http://placehold.it/200x100")%>
-                  <span class="card-title">Home Repairs</span>
+                  <span class="card-title">Reviews</span>
                 </div>
                 <div class="card-content">
-                  <p>Find repairs locally</p>
+                  <p>Find local service providers sorted by review.</p>
                 </div>
                 <div class="card-action">
                 </div>
@@ -55,10 +55,10 @@
               <div class="card 300px">
                 <div class="card-image">
                   <%= image_tag("http://placehold.it/200x100")%>
-                  <span class="card-title">Find a Service</span>
+                  <span class="card-title">View Services</span>
                 </div>
                 <div class="card-content">
-                  <p>All services</p>
+                  <p>View all of our services.</p>
                 </div>
                 <div class="card-action">
                 </div>
