--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,11 +2,11 @@
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
-        <h5 class="white-text">@ServiceWorks</h5>
+        <h5 class="white-text">@HammerTime</h5>
         <p class="grey-text text-lighten-4">Fixing repairs near you</p>
       </div>
       <div class="col l4 offset-4 s12">
-        <h5 class="white-text">FixMiCasa</h5>
+        <h5 class="white-text">HammerTime</h5>
         <ul>
           <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
           <li><a class="grey-text text-lighten-3" href="#!">Contact Us</a></li>
