--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,10 +3,11 @@
   <div class="navbar-fixed">
     <nav class="#8bc34a light-green">
      <div class="nav-wrapper container">
-       <%= link_to 'Service Works', root_path, id: "logo", class: "brand-logo" %>
+       <%= link_to 'HammerTime', root_path, id: "logo", class: "brand-logo" %>
        <ul id="nav-mobile" class="right hide-on-med-and-down">
          <li><%= link_to 'Home', root_path %></li>
          <li><%= link_to 'Help', root_path %></li>
+
          <!-- Dropdown Trigger -->
          <% if logged_in? %>
            <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Account<i class="material-icons right"></i></a></li>
