--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,98 +1,83 @@
 <% provide(:title, 'Sign up') %>
-<h1><%= "#{@user.first_name}" %>'s Profile  </h1>
+<h1 class="profile-title"><%= "#{@user.first_name}" %>'s Profile  </h1>
 
 <div class="row">
-  <div class="col s12">
-    <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages' %>
-    <div class="row">
-      <div class="input-field col s4 offset-s2">
-        <%= f.label "First Name" %>
-        <%= f.text_field :first_name %>
-      </div>
-    </div>
-    <div class="row">
-      <div class="input-field col s4 offset-s2">
-        <%= f.label "Last Name" %>
-        <%= f.text_field :last_name %>
-      </div>
-    </div>
-  </div>
-  <div class="col s12" >
-    <div class="row">
-      <div class="input-field col s6">
-        <%= f.label "Email" %>
-        <%= f.email_field :email %>
-      </div>
-    </div>
-    <div class="row">
-      <div class="input-field col s6">
-        <%= f.label "Phone" %>
-        <%= f.text_field :phone %>
-      </div>
-    </div>
-  </div>
-<div class="col s12">
-  <div class="row">
-    <div class="input-field col s3">
-      <%= f.label "Address" %>
-      <%= f.text_field :street_one %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="input-field col s3">
-      <%= f.label "Address cont." %>
-      <%= f.text_field :street_two %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="input-field col s3">
-      <%= f.label "State" %>
-      <%= f.text_field :state %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="input-field col s3">
-      <%= f.label "Zip" %>
-      <%= f.text_field :zip %>
-    </div>
-  </div>
-</div>
-<div class="col s12">
-  <div class="row">
-    <div class="input-field col s6">
-      <%= f.label "Password" %>
-      <%= f.password_field :password %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="input-field col s6">
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation%>
-    </div>
-  </div>
+  <!-- main div  container for form-->
+  <div class="col s8 offset-s2 z-depth-1 user-form">
+    <div class="col s12">
+      <h3 class="center-align ">Personal Info</h3>
+      <%= form_for(@user) do |f| %>
+        <%= render 'shared/error_messages' %>
+        <div class="input-field col s6 ">
+          <%= f.label "First Name" %>
+          <%= f.text_field :first_name %>
+        </div>
 
-</div>
-<div class="col s12">
-  <div class="row">
-    <input type="checkbox" class="checkbox col s6" checked>
-      <%= f.label "Are you a company?" %>
-      <%= f.check_box :is_provider %>
-    </input>
-  </div>
-</div>
-  <div class="col s12">
-    <div class="row">
-      <div class="input-field col s6">
-        <%= f.label "Company Name" %>
-        <%= f.text_field :company_name %>
-      </div>
+        <div class="input-field col s6">
+          <%= f.label "Last Name" %>
+          <%= f.text_field :last_name %>
+        </div>
+
+        <% if @user.is_provider %>
+          <div class="input-field col s6">
+            <%= f.label "Company Name" %>
+            <%= f.text_field :company_name %>
+          </div>
+
+          <div class="input-field col s6">
+            <%= f.label "Company Description" %>
+            <%= f.text_field :company_desc %>
+          </div>
+        <% end %>
     </div>
-    <div class="row">
-      <div class="input-field col s6">
-        <%= f.label "Company Description" %>
-        <%= f.text_field :company_desc %>
-      </div>
+<!-- Address and contact -->
+    <div class="col s12">
+      <h3 class="center-align ">Address &amp Contact</h3>
+        <div class="input-field col s6">
+          <%= f.label "Email" %>
+          <%= f.email_field :email %>
+        </div>
+
+        <div class="input-field col s6">
+          <%= f.label "Phone" %>
+          <%= f.text_field :phone %>
+        </div>
+
+        <div class="input-field col s6">
+          <%= f.label "Address" %>
+          <%= f.text_field :street_one %>
+        </div>
+
+        <div class="input-field col s6">
+          <%= f.label "Address cont." %>
+          <%= f.text_field :street_two %>
+        </div>
+
+        <div class="input-field col s6">
+          <%= f.label "State" %>
+          <%= f.text_field :state %>
+        </div>
+
+
+        <div class="input-field col s6">
+          <%= f.label "Zip" %>
+          <%= f.text_field :zip %>
+        </div>
+
+    </div>
+    <!-- Security settings -->
+    <div class="col s12">
+        <h3 class="center-align ">Security</h3>
+
+        <div class="input-field col s6">
+          <%= f.label "Password" %>
+          <%= f.password_field :password %>
+        </div>
+
+        <div class="input-field col s6">
+          <%= f.label :password_confirmation, "Confirmation" %>
+          <%= f.password_field :password_confirmation%>
+        </div>
     </div>
   </div>
 </div>
