--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,12 +5,22 @@
         <!-- <h1>Join us today!</h1> -->
     </div>
    </div>
-   <!-- Parrallax Home Section 1 -->
-    <div class="parallax"><%= image_tag "greendoor.jpg" %>  </div>
+   <% %>
+   <form class="home-form row " action="index.html" method="post">
+    <div class="input-field col s4 offset-s4 white z-depth-2">
+      <input id="zipcode" type="text" name="zipcode">
+      <label for="zipcode">Zipcode</label>
+    </div>
+
+
+   </form>
+   <% %>
+   <!-- Section 1 - Parrallax Home -->
+    <div class="parallax"><%= image_tag "teardown.jpg" %>  </div>
 
 </div>
 
-<!-- Homepage Card section-->
+<!-- Section 2 - Homepage Card section-->
 <div class="container">
     <div class="row ">
       <div class="col s12 m4">
@@ -71,7 +81,7 @@
    </div>
 </div>
 
-<!-- Parrallax Home Section 2 -->
+<!-- Section 3 - Parrallax Home  -->
 <div class="parallax-container valign-wrapper">
   <div class="section no-pad-bot">
     <div class="container">
@@ -82,7 +92,7 @@
   <div class="parallax"><%= image_tag "washing.jpg" %></div>
 </div>
 
-<!-- Information services section -->
+<!-- Section 4 - Information services section -->
 <div class="container">
   <section>
 
