--- a/app/views/service_requests/show.html.erb
+++ b/app/views/service_requests/show.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <p><%= @service_request.created_at.to_formatted_s(:long) %></p>
+<p>Status: <%= @service_request.status %></p>
 <p>Services:</p>
 <ul>
   <% @service_request.services.each do |s| %>
@@ -15,6 +16,9 @@
     <%= q.user.company_name %>'s Quote:<br>
     <%= q.user.company_name %> has offered a quote of <%= number_to_currency(q.amount) %><br>
     <%= q.user.company_name %> says, "<%= q.note %>"<br>
+    <% if @service_request.user_id == current_user.id && !current_user.is_provider %>
+      <%= link_to "Accept", accept_quote_path(quote: { quote_id: q.id }, service_request: {status: "Accepted"}), data: { confirm: "Are you sure you want to accept #{q.user.company_name}'s quote for #{number_to_currency(q.amount)}."} %>
+    <% end %>
     <%= link_to "Delete", service_request_quote_path(q), method: :delete if current_user.id == q.user_id %>
   </div>
   <hr>
@@ -22,25 +26,26 @@
 </ul>
 </div>
 
+<% if current_user.is_provider %>
+  <%= form_for @quote, url: { controller: "quotes", action: "create" }, method: :post do %>
+  <% if @quote.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@quote.errors.count, "error") %> prohibited this service_request from being saved:</h2>
 
-<%= form_for @quote, url: { controller: "quotes", action: "create" }, method: :post do %>
-<% if @quote.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@quote.errors.count, "error") %> prohibited this service_request from being saved:</h2>
-
-    <ul>
-    <% @quote.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
-  <%= label_tag :amount, "Quote" %>
-  <%= text_field_tag "quote[amount]"%>
-  <%= label_tag :note, "Note" %>
-  <%= text_area_tag "quote[note]"%>
-  <%= hidden_field_tag("quote[service_request_id]", @service_request.id ) %>
-  <%= submit_tag("Send Quote") %>
+      <ul>
+      <% @quote.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+    <%= label_tag :amount, "Quote" %>
+    <%= text_field_tag "quote[amount]"%>
+    <%= label_tag :note, "Note" %>
+    <%= text_area_tag "quote[note]"%>
+    <%= hidden_field_tag("quote[service_request_id]", @service_request.id ) %>
+    <%= submit_tag("Send Quote") %>
+  <% end %>
 <% end %>
 
 <%= link_to 'Back', user_service_requests_path(current_user) %>
