--- a/app/views/service_requests/index.html.erb
+++ b/app/views/service_requests/index.html.erb
@@ -26,8 +26,16 @@
       <%= sr.additional_notes %>
     </p>
     <p>
-      There are <%= link_to pluralize(sr.quotes.count, "quote"),
-      user_service_request_path(sr.user_id, sr) %>
+      <% if sr.status == "Accepted"%>
+        <% sr.quotes.each do |q| %>
+          <% if q.status == "Accepted" %>
+            You have accepted <%= User.find(q.user_id).company_name %>'s quote for <%= number_to_currency(q.amount) %>
+          <% end %>
+        <% end %>
+      <% else %>
+        There are <%= link_to pluralize(sr.quotes.count, "quote"),
+        user_service_request_path(sr.user_id, sr) %>
+      <% end %>
     </p>
   </div>
 
