Add overlay and title to home

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
   <div class="navbar-fixed">
     <nav class="#8bc34a light-green">
      <div class="nav-wrapper container">
-       <%= link_to 'HammerTime', root_path, id: "logo", class: "brand-logo" %>
+       <%= link_to 'Service Works', root_path, id: "logo", class: "brand-logo" %>
        <ul id="nav-mobile" class="right hide-on-med-and-down">
          <li><%= link_to 'Home', root_path %></li>
          <li><%= link_to 'Help', root_path %></li>
