--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -11,16 +11,37 @@ a#logo {
 /***** HomePage *****/
 /* Section 1 */
  /* First parrallax container */
+ .parallax-container {
+  position: relative;
+ }
+
+.home-title {
+  font-size: 64;
+  color: white;
+  margin: 16% 0 0 0;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+}
+ .overlay {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100vh;
+   z-index: 10;
+   background-color: rgba(150,150,150,0.3);
+ }
+
+
+
 #homedoor {
   height: 100vh;
 }
 
 .home-form {
-  margin: 20% 0 0 0;
+  /*margin: 15% 0 0 0;*/
   opacity: 10%;
 }
-
-
 
 
 /* Section 2 */
