--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,22 +1,26 @@
 <footer class="page-footer #8bc34a light-green">
-  <div class="container">
+
     <div class="row">
-      <div class="col l6 s12">
-        <h5 class="white-text">Service Works</h5>
-        <p class="grey-text text-lighten-4">Fixing repairs near you</p>
+      <div class="col s8 offset-s2">
+        <div class="col s6">
+          <h5 class="white-text">Service Works</h5>
+          <p class="grey-text text-lighten-4">Fixing repairs near you</p>
+        </div>
+        <div class="col s6 ">
+          <h5 class="white-text">Service Works</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Contact Us</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Cities</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Repairs</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Servicers: Join Us</a></li>
+          </ul>
+        </div>
       </div>
-      <div class="col l4 offset-4 s12">
-        <h5 class="white-text">Service Works</h5>
-        <ul>
-          <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Contact Us</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Cities</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Repairs</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Servicers: Join Us</a></li>
-        </ul>
-      </div>
+
+
     </div>
-  </div>
+
   <div class="footer-copyright">
     <div class="container">
       &copy; 2015 by Wyncode. Made with love in South Florida.
