--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,11 @@
     <nav class="#8bc34a light-green">
      <div class="nav-wrapper container">
        <%= link_to 'Service Works', root_path, id: "logo", class: "brand-logo" %>
+
+       <!-- for hamburger menu -->
+      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+
+      <!-- links on desktop -->
        <ul id="nav-mobile" class="right hide-on-med-and-down">
          <li><%= link_to 'Home', root_path %></li>
          <li><%= link_to 'Help', root_path %></li>
@@ -12,7 +17,7 @@
          <% if logged_in? %>
            <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Account<i class="material-icons right"></i></a></li>
              <ul id="dropdown1" class="dropdown-content">
-               <li><%= link_to 'Profile', current_user %></li>
+               <li><%= link_to 'Profile', user_service_requests_path(current_user.id)%></li>
                <li><%= link_to 'Account Settings', current_user %></li>
                <li class="divider"></li>
                <li><%= link_to 'Logout', logout_path, method: "delete" %></li>
@@ -21,6 +26,22 @@
             <li><%= link_to 'Login', login_path %></li>
           <% end %>
        </ul>
+
+       <!-- links on mobile -->
+       <ul class="side-nav" id="mobile-demo">
+         <li><%= link_to 'Home', root_path %></li>
+         <li><%= link_to 'Help', root_path %></li>
+
+         <!-- Dropdown Trigger -->
+         <% if logged_in? %>
+               <li><%= link_to 'Profile', user_service_requests_path(current_user.id)%></li>
+               <li><%= link_to 'Account Settings', current_user %></li>
+               <li class="divider"></li>
+               <li><%= link_to 'Logout', logout_path, method: "delete" %></li>
+          <% else %>
+            <li><%= link_to 'Login', login_path %></li>
+          <% end %>
+      </ul>
      </div>
     </nav>
   </div>
