--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,7 +14,7 @@
       <% %>
       <h1 class="home-title">Need home repair?</h1>
       <form class="home-form row " action="index.html" method="post">
-       <div class="input-field col s4 offset-s4 white z-depth-2">
+       <div class="input-field col s10 m4 offset-m4 offset-s1 white z-depth-2">
          <input id="zipcode" type="text" name="zipcode">
          <label for="zipcode">Zipcode</label>
        </div>
@@ -45,7 +45,6 @@
         </div>
       </div>
 
-      <div class="row ">
         <div class="col s12 m4">
           <div class="icon block">
               <h2 class="center brown-text"><i class="material-icons">dashboard</i></h2>
@@ -62,8 +61,6 @@
               </div>
           </div>
         </div>
-
-        <div class="row ">
           <div class="col s12 m4">
             <div class="icon block">
             <h2 class="center brown-text"><i class="material-icons">search</i></h2>
@@ -82,8 +79,7 @@
           </div>
         </div>
       </div>
-   </div>
-</div>
+
 
 <!-- Section 3 - Parallax Home  -->
 <div class="parallax-container valign-wrapper">
