finish service request image uploader

--- a/app/views/service_requests/_form.html.erb
+++ b/app/views/service_requests/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="input-field">
     <%= f.label :image, "Upload a Photo" %><br>
-    <%= f.file_field :image %>
+      <%= f.file_field :image, multiple: true %>
   </div>
 
   <div class="row">
