--- a/app/views/service_requests/show.html.erb
+++ b/app/views/service_requests/show.html.erb
@@ -10,9 +10,13 @@
   <% end %>
 <p>Notes:</p>
 <p><%= @service_request.additional_notes %></p>
-<%= image_tag @service_request.image_url(:show) %>
+<%= image_tag @service_request.image[0].url(:show) if @service_request.image[0] %>
+<%= image_tag @service_request.image[1].url(:show) if @service_request.image[1] %>
+<%= image_tag @service_request.image[2].url(:show) if @service_request.image[2] %>
+<%= image_tag @service_request.image[2].url(:show) if @service_request.image[3] %>
+<%= image_tag @service_request.image[2].url(:show) if @service_request.image[4] %>
 
-<!-- loop through all quotes on a service request. -->
+
 <% if @accepted_quote %>
   <div class="accepted-quote">
     <%= @accepted_quote.user.company_name %>'s Quote:<br>
